--- a/index.html
+++ b/index.html
@@ -135,7 +135,41 @@
     <p class="font-normal text-xl  text-[#494949]">Staff Members</p>
   </div>
        </div>
+<!-- How we works -->
+<button class="lg:flex flex lg:items-center gap-3 bg-white rounded-3xl px-1  duration-500 hover:bg-gray-100 hover:text-red-200 mx-auto mb-8 mx-auto"><span><i class="fa-solid fa-arrow-right text-black text-sm  w-5 h-5 pl-1 rounded-full "></i>How we works</span></button>
+<h3 class="font-bold text-4xl text-[#212121] mb-8 text-center">Our Works Process</h3>
+<p class="font-normal text-xl text-[#494949] mb-8 text-center">The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
+<!-- section -->
+ <section class="lg:flex lg:justify-between">
+<!-- card one -->
+ <div class="bg-[#E7C1D3] w-64 h-48 rounded-rounded- rounded-2xl pl-2 py-10 mb-8 lg:ml-0 mx-auto">
+  <img src="assets/concept.png" alt="">
+  <h6 class="font-extrabold text-xl text-[#1C1C1C]">Concept</h6>
+  <p class="font-normal text-sm text-[#494949]">The barn house captivates;<br> with its blend of rustic charm <br>
+     and modern.</p>
+ </div>
+ <!-- card two -->
+ <div class="bg-[#EFDA6E] w-64 h-48 rounded-rounded- rounded-2xl pl-2 py-10 mb-8 lg:ml-0 mx-auto">
+  <img src="assets/flow-chart.png" alt="">
+  <h6 class="font-extrabold text-xl text-[#1C1C1C]">Design Process</h6>
+  <p class="font-normal text-sm text-[#494949]">The barn house captivates;<br> with its blend of rustic charm <br>
+     and modern.</p>
+ </div>
+ <!-- card three -->
+ <div class="bg-[#A4DAC3] w-64 h-48 rounded-rounded- rounded-2xl pl-2 py-10 mb-8 lg:ml-0 mx-auto">
+  <img src="assets/vision.png" alt="">
+  <h6 class="font-extrabold text-xl text-[#1C1C1C]">Supervision</h6>
+  <p class="font-normal text-sm text-[#494949]">The barn house captivates;<br> with its blend of rustic charm <br>
+     and modern.</p>
+ </div>
+ <!-- card four -->
+ <div class="bg-[#77AAEA] w-64 h-48 rounded-rounded- rounded-2xl pl-2 py-10 lg:ml-0 mx-auto mb-20">
+  <img src="assets/budget-planning.png" alt="">
+  <h6 class="font-extrabold text-xl text-[#1C1C1C]">Budget Planning</h6>
+  <p class="font-normal text-sm text-[#494949]">The barn house captivates;<br> with its blend of rustic charm <br>
+     and modern.</p>
+ </div>
+ </section>
 
-  
 </body>
 </html>
