--- a/index.html
+++ b/index.html
@@ -220,6 +220,20 @@
 
        </div>
      </section>
+     <!-- Let's connect section -->
+      <section class="bg-[url(./assets/bg.jpg)] pt-20">
+        <button class="lg:flex flex lg:items-center gap-3 bg-lime-200 rounded-3xl px-1   duration-500 hover:bg-gray-100 hover:text-red-200 mb-4 mx-auto"><span><i class="fa-solid fa-arrow-right text-black text-sm  w-5 h-5 pl-1 rounded-full "></i>Rinterio News</span></button>
+        <h6 class="font-bold text-4xl text-[#1C1C1C] text-center mb-8">Let's Discuss Next Project</h6>
+        <p class="font-normal text-xl text-[#494949] mb-4 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+<div class="grid lg:grid-cols-2 gap-8 lg:px-52 px-28">
+  <input type="text" placeholder="First Name" class="rounded-2xl ">
+  <input type="text" placeholder="Last Name" class="rounded-2xl ">
+  <input type="text" placeholder="Phone Number" class="rounded-2xl ">
+  <input type="text" placeholder="Email Number" class="rounded-2xl ">
+  <textarea name="text" id="" placeholder="Write Your messege here" class="rounded-2xl lg:h-40 h-30  lg:col-span-2"></textarea>
+  <button class="md:flex lg:items-center lg:col-span-2 gap-3 bg-lime-400 rounded-3xl px-1 py-1 mb-8   duration-500 hover:bg-gray-100 hover:text-red-200 "><div class="mx-auto pl2"><span>Send Email</span><i class="fa-solid fa-arrow-right  bg-black text-white text-sm -rotate-45 w-5 h-5 pl-1 rounded-full "></i></div></button>
+</div>
+      </section>
 
 
   
