--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   </header>
  <!-- main -->
 <main>
+
 <!-- About us -->
 <img class="lg:pw-24 lg:ml-16 " src="assets/Vector.png" alt="">
     <section class="lg:w-[1000px]  lg:h-[450px] h-[900px]  mx-auto mb-16 lg:flex lg:justify-between lg:gap-4">
@@ -221,7 +222,7 @@
        </div>
      </section>
      <!-- Let's connect section -->
-      <section class="bg-[url(./assets/bg.jpg)] pt-20">
+      <section class="bg-[url(./assets/bg.jpg)] pt-20 mb-20">
         <button class="lg:flex flex lg:items-center gap-3 bg-lime-200 rounded-3xl px-1   duration-500 hover:bg-gray-100 hover:text-red-200 mb-4 mx-auto"><span><i class="fa-solid fa-arrow-right text-black text-sm  w-5 h-5 pl-1 rounded-full "></i>Rinterio News</span></button>
         <h6 class="font-bold text-4xl text-[#1C1C1C] text-center mb-8">Let's Discuss Next Project</h6>
         <p class="font-normal text-xl text-[#494949] mb-4 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
@@ -236,6 +237,37 @@
       </section>
 
 
+</main>
+
+<!-- footer section -->
+ <footer>
+  <section class="bg-black rounded-2xl">
+    <button class="lg:flex flex lg:items-center gap-3 rounded-3xl px-1 duration-500   mb-4 mx-auto">
+      <span class="flex items-center mb-4 mt-24">
+        <i class="fa-solid fa-arrow-right text-black text-sm bg-lime-300 w-5 h-5 pl-1 -rotate-45 rounded-full "></i>
+        <span class="font-extrabold text-3xl text-[#E9E9E9] pl-2">Rinterio </span>
+      </span>
+    </button>
+      
+<p class="font-medium text-sm text-gray-500 text-center mb-4">The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
+<!-- flex section -->
+<ul class="lg:flex  gap-24 lg:justify-center text-center">
+  <li><a class="text-gray-300 " href="">Home</a></li>
+  <li><a class="text-gray-300 " href="">Services</a></li>
+  <li><a class="text-gray-300 " href="">Portfolio</a></li>
+  <li><a class="text-gray-300 " href="">Blogs</a></li>
+ <li><a class="text-gray-300 " href="">Contact Us</a></li> 
+</ul>
+<button class="lg:flex lg:items-center flex items-center gap-3 bg-lime-400 rounded-3xl px-1 py-1  duration-500  mx-auto mt-16">
+  
+    <span>Book Consult</span>
+    <i class="fa-solid fa-arrow-right bg-black text-white text-sm -rotate-45 w-5 h-5 pl-1 rounded-full "></i>
+  
+ 
+</button>
+<br><br><br>
+  </section>
+ </footer>
   
 
 </body>
