--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      
 </head>
 
-<body class="lg:px-20 md:px-16 px-6 bg-gradient-to-r from-gray-300 to-gray-200">
+<body class="lg:px-20 md:px-16  bg-gradient-to-r from-gray-300 to-gray-200">
   <header>
     <nav class="p-5  lg:flex lg:items-center lg:justify-between mt-10 mb-10">
       <!-- left side nav -->
@@ -76,8 +76,8 @@
 <main>
 
 <!-- About us -->
-<img class="lg:pw-24 lg:ml-16 " src="assets/Vector.png" alt="">
-    <section class="lg:w-[1000px]  lg:h-[450px] h-[900px]  mx-auto mb-16 lg:flex lg:justify-between lg:gap-4">
+<img class="lg:pw-24 lg:ml-16 bg-gray-500" src="assets/Vector 14.jpg" alt="">
+    <section class="lg:w-[1000px]  lg:h-[450px]   mx-auto mb-16 lg:flex lg:justify-between lg:gap-4">
       <!-- first column-->
        <div class="lg:pl-5 pl-1 lg:pt-10 pt-1 ">
 <!-- first row -->
@@ -105,7 +105,7 @@
         </div>
 
        </div>
-<img class="pr-10" src="assets/Rectangle.png" alt="">
+<img class="pr-10 h-[450px]" src="assets/Rectangle.png" alt="">
 
     </section><br><br><br>
     
