--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      
 </head>
 
-<body class="lg:px-20 md:px-16  bg-gradient-to-r from-gray-300 to-gray-200">
+<body class="lg:px-20 md:px-16 px-2 bg-gradient-to-r from-gray-300 to-gray-200">
   <header>
     <nav class="p-5  lg:flex lg:items-center lg:justify-between mt-6 mb-4">
       <!-- left side nav -->
@@ -170,6 +170,26 @@
   <p class="font-normal text-sm text-[#494949]">The barn house captivates;<br> with its blend of rustic charm <br>
      and modern.</p>
  </div>
+
+ </section>
+</section>
+
+<!-- Aditional Section for design -->
+ <h1 class="font-black text-orange-300 text-4xl text-center mb-4">Our Facilities</h1>
+ <p class="font-normal text-orange-300 text2xl text-center mb-4">We will provide large ground and good park .This is very  useful for your chidern growth . Your children can play <br>different kinds of game on ground and . I wish this  is very important for you and yours children .We <br> will provide nightguard .. Please come and see our flat and our Services</p>
+ <section class="lg:flex justify-center gap-8">
+  <!-- one -->
+  <div>
+<img class="pb-6 w-[370px] h-[350px] rounded-2xl mx-auto" src="assets/pexels-digitalbuggu-186239.jpg" alt="">
+<h1 class="font-extrabold text-blue-500 text-4xl pb-6 text-center">Good Ground</h1>
+<p class="font-normal text-blue-500 text-xl pb-6 mx-auto text-center">We will provide you clean and large ground <br> for  spend qualitiful time .</p>
+  </div>
+  <!-- two -->
+  <div>
+    <img class="pb-6 w-[370px] h-[350px] rounded-xl mx-auto" src="assets/pexels-lanophotography-147640.jpg" alt="">
+    <h1 class="font-extrabold text-blue-500 text-4xl pb-6 text-center">Large Park</h1>
+    <p class="font-normal text-blue-500 text-xl pb-6 text-center">You can enjoy singing birds noise .There has <br> different kinds of tree</p> <br> 
+      </div>
  </section>
  <!-- Renterio News Section -->
   
@@ -234,8 +254,6 @@
   <textarea name="text" id="" placeholder="Write Your messege here" class="rounded-2xl lg:h-40 h-30  lg:col-span-2"></textarea>
   <button class="md:flex lg:items-center lg:col-span-2 gap-3 bg-lime-400 rounded-3xl px-1 py-1 mb-8   duration-500 hover:bg-gray-100 hover:text-red-200 "><div class="mx-auto pl2"><span>Send Email</span><i class="fa-solid fa-arrow-right  bg-black text-white text-sm -rotate-45 w-5 h-5 pl-1 rounded-full "></i></div></button>
 </div>
-      </section>
-
 
 </main>
 
